--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -65,12 +65,12 @@ In the field of synthetic and analytical chemistry, the repository [Chemotion](h
 - [RADAR](https://www.radar-service.eu/radar/en/home) Repository for multi-disciplinar research data 
 - [Zenodo](https://zenodo.org/) General-purpose open-access repository developed under the European OpenAIRE program and operated by CERN
 - [EUDAT CDI](https://www.eudat.eu/) Pan-European network consisting of more than 25 research organisations, data and computing centers
-- [ChemSpider](https://www.chemspider.com/)  Free chemical structure database providing fast text and structure search access to over 100 million structures from hundreds of data sources
+- [ChemSpider](https://www.chemspider.com/) Free chemical structure database providing fast text and structure search access to over 100 million structures from hundreds of data sources
 - [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry database at the National Institutes of Health (NIH)
 
 ## Sources and further information
 - https://www.rd-alliance.org/groups/repository-platforms-research-data.html
 - https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
-- The Repository Chemotion: Infrastructure for Sustainable Research in Chemistry<br/>https://doi.org/10.1002/anie.202007702
-- Chemotion ELN: an Open Source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
+- The Repository Chemotion: infrastructure for sustainable research in chemistry<br/>https://doi.org/10.1002/anie.202007702
+- Chemotion ELN: an open source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
 - german: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
