--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -11,6 +11,18 @@ ELNs are a key prerequisite to a comprehensive, digital documentation of researc
 NFDI4Chem will support those ELNs that are relevant for documentation of chemical research acitivities. 
 
 
-## Chemotion
+## Chemotion ELN
 
-Chemotion is the reference instance of NFDI4Chem
+Chemotion is the ELN reference instance of NFDI4Chem. Chemotion ELN is developed by several software developers at different sites of NFDI4Chem. The ELN development started at KIT in Karlsruhe as part of a DFG funded project, the extension of the software was and is further supported by the State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts and the Karlsruhe Institute of Technology. 
+The ELN Chemotion was designed for chemists and adapted to the special requirements of chemistry laboratory work and documentation. It serves therefore as digitalization instrument for chemistry work, developed to overcome the current limitations of existing systems. To reach this goal, the development, improvement and extension of the ELN is a community effort. The ELN is also used in other disciplines beyond chemistry as it offers a broad generic functionality to meet the needs of scientists working interdiciplinarily. These generic functions are still being extended and adapted. 
+
+Chemotion ELN offers a specific function that facilitates the publication of research data: it supports the transfer of data form the ELN account of a user to a research data repository. This function reduces the effort of the scientists to allow access to research data, which is required by many funding agencies and helpful for the publication of scientific publications. Currently, the ELN supports the tranfer of data to the repository Chemotion but the NFDI4Chem teams is working on the establishment of connections to further repositories, in particular the repositories supported and recommended by NFDI4Chem. 
+
+
+### Documentation, information and contact
+
+Chemotion ELN an its functions were described in differnt publications. 
+
+
+
+
