--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -14,6 +14,8 @@ The term ontology, as used in our context, refers to a formally specified concep
 Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analysed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. Ontologies, taxonomies, terminologies or vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data.
 Quite a few ontologies already exist for the semantic description of general scientific concepts and relations, as well as for chemistry specific ones.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/b5c2oawLPU8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+
 # Ontologies useful for Chemistry
 ![Ontology-based RDM](/img/topics/Overview_Ontologies4Chem_2021.svg)
 Image Attribution: Philip Strömert, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
