--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -3,7 +3,7 @@ title: "Ontology"
 ---
 
 ![Ontology-based RDM](/img/topics/Graphical_Abstract_Ontologies4Chem_2021.svg)
-Image Attribution: Philip Strömert, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
+Image Attribution: Philip Strömert, Oliver Köpler, Johannes Hunold, Steffen Neumann, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
 
 
 :::info Summary:
