change license of overview graphic to cc-by 4.0

--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -19,7 +19,7 @@ Quite a few ontologies already exist for the semantic description of general sci
 
 # Ontologies useful for Chemistry
 ![Ontology-based RDM](/img/topics/Overview_Ontologies4Chem_2021.svg)
-Image Attribution: Philip Strömert, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
+Image Attribution: Philip Strömert, [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)
 
 | Ontology | Domain | License | Modularity | Used in |
 | -------- | ------ | ------- | ---------- | ------- |
