add license links in table

--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -21,30 +21,32 @@ Quite a few ontologies already exist for the semantic description of general sci
 ![Ontology-based RDM](/img/topics/Overview_Ontologies4Chem_2021.svg)
 Image Attribution: Philip Strömert, [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)
 
+
+## Table of Ontologies useful in Chemistry Contexts
 | Ontology | Domain | License | Modularity | Used in |
 | -------- | ------ | ------- | ---------- | ------- |
-| [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO \& OBO based | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB |
-| [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)  | chemistry | CC0 1.0 | BFO \& OBO based | unknown |
-| [ChemOnt](http://classyfire.wishartlab.com/downloads) | chemistry | custom OA license | subsumable under BFO's \newline \textit{material entity} | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA |
-| [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)  | chemistry | CC-BY 3.0 | BFO \& OBO based | PubChem, Open PHACTS |
-| [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | chemistry | CC-BY 3.0 | BFO \& OBO based | Chemotion, Allotrope™ |
-| [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | chemistry | CC-BY 4.0 | BFO \& OBO based | RXNO |
-| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | CC-BY 4.0 | BFO \& OBO based | NameRXN, Wikipedia, Chemotion |
-| [OntoKin](http://www.theworldavatar.com/ontology/ontokin/) | chemistry | unknown | OntoCAPE upper level \& modules | J-Park Simulator |
-| [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | chemistry | CC-BY 4.0 | BFO classes \& relations, many AFO- some custom OBO-modules  | Allotrope™ |
-| [PROCO](https://terminology.nfdi4chem.de/ts/ontologies/proco) | chemistry | CC-BY 4.0 | AFO \& OBO based | Allotrope™ |
-| [MS](https://terminology.nfdi4chem.de/ontologies/ms) | chemistry | CC-BY 4.0 | BFO \& OBO mapping possible | mzML |
-| [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv) | chemistry | Public Domain Mark 1.0 | BFO \& OBO mapping possible | MetaboLights, HMDB |
-| [BFO](https://terminology.nfdi4chem.de/ontologies/bfo) | upper level (classes only) | CC-BY 4.0 | OBO backbone | >300 ontologies \& >50 organizations, PubChem |
-| [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro) | upper level (relations) | CC0 1.0 | BFO \& OBO based | Monarch Initiative, OBO Foundry, Gene Ontology, PubChem |
-| [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao) | information artefacts | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™, PubChem, ISA tools |
-| [OBI](https://terminology.nfdi4chem.de/ts/ontologies/obi) | biomedicine | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™, PubChem |
-| [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo) | scientific units | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, UOM, PubChem |
-| [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html) | scientific units | CC-BY 4.0 | BFO \& OBO based mapping possible | openPHACTS |
-| [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato) | phenotypic \& physical qualities | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™ |
-| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | upper level | CC-BY 4.0 | BFO alignment | PubChem |
-| [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam) | life-sciences \& data management | CC-BY 4.0 | BFO \& OBO mapping possible | EMBOSS, Bio-jETI |
-| [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/) | upper level \& engineering | GNU GPLv2 | provides upper level concepts | J-Park Simulator |
+| [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB |
+| [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)  | chemistry | [CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/) | BFO & OBO based | unknown |
+| [ChemOnt](http://classyfire.wishartlab.com/downloads) | chemistry | custom OA license | subsumable under BFO's *material entity* | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA |
+| [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)  | chemistry | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO based | PubChem, Open PHACTS |
+| [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | Chemotion, Allotrope™ |
+| [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | RXNO |
+| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | NameRXN, Wikipedia, Chemotion |
+| [OntoKin](http://www.theworldavatar.com/ontology/ontokin/) | chemistry | unknown | OntoCAPE upper level & modules | J-Park Simulator |
+| [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO classes & relations, many AFO- some custom OBO-modules  | Allotrope™ |
+| [PROCO](https://terminology.nfdi4chem.de/ts/ontologies/proco) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | AFO & OBO based | Allotrope™ |
+| [MS](https://terminology.nfdi4chem.de/ontologies/ms) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO mapping possible | mzML |
+| [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv) | chemistry | [Public Domain Mark 1.0](https://creativecommons.org/publicdomain/mark/1.0/deed) | BFO & OBO mapping possible | MetaboLights, HMDB |
+| [BFO](https://terminology.nfdi4chem.de/ontologies/bfo) | upper level (classes only) | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | OBO backbone | >300 ontologies & >50 organizations, PubChem |
+| [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro) | upper level (relations) | CC0 1.0 | BFO & OBO based | Monarch Initiative, OBO Foundry, Gene Ontology, PubChem |
+| [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao) | information artefacts | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, Allotrope™, PubChem, ISA tools |
+| [OBI](https://terminology.nfdi4chem.de/ts/ontologies/obi) | biomedicine | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, Allotrope™, PubChem |
+| [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo) | scientific units | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, UOM, PubChem |
+| [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html) | scientific units | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based mapping possible | openPHACTS |
+| [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato) | phenotypic & physical qualities | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, Allotrope™ |
+| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | upper level | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO alignment | PubChem |
+| [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam) | life-sciences & data management | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO mapping possible | EMBOSS, Bio-jETI |
+| [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/) | upper level & engineering | [GNU GPLv2](https://www.gnu.org/licenses/old-licenses/gpl-2.0) | provides upper level concepts | J-Park Simulator |
 
 # General Scientific Ontologies
 
