--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -58,7 +58,7 @@ This tabular overview lists the suitable ontologies with regard to:
 ### General Scientific Ontologies
 
 #### BFO
-The Basic Formal Ontology (BFO)](https://terminology.nfdi4chem.de/ts/ontologies/bfo) is the most widely used upper ontology for many existing chemistry domain ontologies that are part of [The Open Biological and Biomedical Ontology (OBO) Foundry](http://www.obofoundry.org/) project. It is also in the process of becoming an ISO Standard.
+The Basic Formal Ontology [(BFO)](https://terminology.nfdi4chem.de/ts/ontologies/bfo) is the most widely used upper ontology for many existing chemistry domain ontologies that are part of [The Open Biological and Biomedical Ontology (OBO) Foundry](http://www.obofoundry.org/) project. It is also in the process of becoming an ISO Standard.
 #### SIO
 The [Semanticscience Integrated Ontology (SIO)](https://terminology.nfdi4chem.de/ts/ontologies/sio)
 It has been used in [Bio2RDF](http://bio2rdf.org/), [SADI Semantic Web Services](http://sadiframework.org), [DisGeNET](http://rdf.imim.es/DisGeNET.html), [PubChemRDF](http://pubchem.ncbi.nlm.nih.gov/rdf/), [EBI's Gene Expression Atlas](http://www.ebi.ac.uk/rdf/documentation/atlas) and the [Graph4Code project](https://wala.github.io/graph4code/). To foster semantic interoperability, SIO is mapped to BFO and RO for important core classes and relations.
