--- a/docs/30_problems/10_dmp.mdx
+++ b/docs/30_problems/10_dmp.mdx
@@ -14,7 +14,7 @@ A DMP, like an [electronic laboratory notebook](/docs/topics/eln) or even a labo
 
 In addition, the data management plan also addresses cross-cutting issues such as standards, ethics, responsibilities, and so on. The following [elements](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html) are included in a DMP:
 
-Image Elements of a Data Management Plan will follow soon.
+![DMP](/img/problems/DMP.png)
 
 ## Benefits of a DMP
 
