--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -81,7 +81,7 @@ Data need to be integrated with and/or compared to other datasets, while compute
 
 Machines need to be able to understand how to exchange and interpret information. Similar to humans, a uniform and standard language aids in this understanding. In chemistry, a great typical example of such an information exchange standard is the [crystallographic information (CIF)](https://doi.org/10.1107/97809553602060000107). This standard also adheres to the aspects described in [I2](#i2-metadata-use-vocabularies-that-follow-fair-principles) and [R1.3](#r13-metadata-meet-domain-relevant-community-standards) below.
 
-Especially when looking at metadata, effective and efficient machine readability greatly depends on being able to reduce ambiguity. Metadata provides context to datasets. However, machines need to be able to interpret this context. Therefore, the structured schemas chosen by the repositories should include universally applied [ontologies](https://terminology.nfdi4chem.de/ts/ontologies) and controlled vocabularies to define relationships and avoid ambiguity. For example, chemistry-specific repositories should be designed to include [ontologies](50_ontology_search.mdx) such as the [Chemical Methods Ontology (CHMO)](http://purl.obolibrary.org/obo/chmo.owl). Specifically, a drop-down menu in a given metadata field would include terms defined here regarding chemical methods. This negates spelling errors, synonyms, and so on when entering metadata. Such ontologies should be based on widely-applied data models, for instance, the
+Especially when looking at metadata, effective and efficient machine readability greatly depends on being able to reduce ambiguity. Metadata provides context to datasets. However, machines need to be able to interpret this context. Therefore, the structured schemas chosen by the repositories should include universally applied [ontologies](https://terminology.nfdi4chem.de/ts/ontologies) and controlled vocabularies to define relationships and avoid ambiguity. For example, chemistry-specific repositories should be designed to include [ontologies](/docs/topics/ontology) such as the [Chemical Methods Ontology (CHMO)](http://purl.obolibrary.org/obo/chmo.owl). Specifically, a drop-down menu in a given metadata field would include terms defined here regarding chemical methods. This negates spelling errors, synonyms, and so on when entering metadata. Such ontologies should be based on widely-applied data models, for instance, the
 [Resource Description Framework (RDF)](https://www.w3.org/RDF/).
 
 <!-- What are other data models (relevant for chemistry)? -->
