Research group leader article

--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -2,6 +2,47 @@
 title: "Research Group Leader"
 ---
 
-![Under Construction](/img/Constr_2bl.png)
+:::info Applies to:
+This article applies to research group leaders, who plan to organise the RDM of their group.
+:::
 
-Article under construction.
+## Motivation
+
+As research group leader, you are responsible for the [research data organisation](/docs/problems/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/problems/dmp) in order to ensure that the data are archived in a [FAIR](/docs/topics/fair) way (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable). Many funding institutions encourage or even enforce the publication of FAIR data.
+
+In the last years, many new digital tools have been developed to support the researchers in their RDM needs. In short, the technical possibilities are explained below. For more details, please refer to the related chapters.
+
+With regard to the [data life cycle](/docs/topics/data_life_cycle) (figure below), the digitalisation of the research data at the end of the production process is the most tedious strategy. It is more efficient to capture the data and their corresponding [metadata](/docs/topics/metadata) already during the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/topics/eln) are facilitating everyday's work considerably: the planning of the experiment, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: the peak lists (e.g. for the supporting information of [publications](docs/problems/data_publication)) for the reporting can be generated automatically by the ELN. The time invest to set up the ELN and to organise the experiments is hence paying off in numerous ways: besides the facilitated [documentation](/docs/problems/data_documentation), the deposition of the produced data in a FAIR form in an [repositorium](/docs/topics/repositories) is made easier and the [data organisation](/docs/problems/data_organisation) for the workgroup can be enhanced by building an internal database. This is invaluable for growing working groups.
+
+![Data life cycle](/img/role/Data_life_cycle.png)
+
+## How to start
+
+The choice of ELN and of the repositorium for the data deposition depends on the chemical sub-domain. Please have a look at the [user profiles](/docs/domains/guide) for domain-specific details.
+Moreover, the [best practice examples](/docs/topics/best_practice) can help to visualise how efficient RDM works.
+
+60 % of the chemists are working synthetically, hence, the advantages of using the ELN Chemotion as a whole working group are listed here:
+
+- data are captured right in the experiment planning, hence fostering data management from the start of experimental work
+- many spectra can be directly analysed in the Chemotion environment using ChemSpectra
+- the experimental part for publications/these is printed out by the software, no manual steps needed
+- for NMR spectra a plausibility check is available
+- integration of SciFinder search
+- building up an internal database
+- advancing collaboration and data exchange in the group
+- seamless export to the [Chemotion Repository](https://www.chemotion-repository.net/welcome) as FAIR deposit of the data with [DOI](/docs/topics/pid) for each molecule
+- academic version for free
+- you stay master of your data when running your own Chemotion instance
+
+:::info Info:
+The [Chemotion introductory video](https://www.youtube.com/watch?v=tZHaP6DW-Dw) (in german) provides a good overview of Chemotion as a tool in research data management.
+:::
+
+In case you are already working with another ELN or prefer to stay with the traditional notebook, the data needs to be stored in a FAIR way in a repositorium. Without using Chemotion ELN, the data can go to the Chemotion repo, but multiple repos exist meanwhile in chemistry.The advantage of the Chemotion repo is that the molecule gets a DOI and all analytical data can be assembled here.
+In [nmrXiv](https://docs.nmrxiv.org/), NMR data can be deposited whereas [MassBank](https://massbank.eu/MassBank/) offers the same for MS data. Computational data are well preserved at [ioChem-BD](https://www.iochem-bd.org/).
+For a growing list of repos with more explanations, please refer to [this list](https://www.re3data.org/).
+
+
+
+
+
