--- a/docs/30_problems/10_dmp.mdx
+++ b/docs/30_problems/10_dmp.mdx
@@ -58,6 +58,6 @@ Further information about DMP tools can be found in the [DMP Tool Guide](https:/
 - https://dmponline.dcc.ac.uk/<br/> 
 - https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg<br/>
 - Practical Guide to the International Alignment of Research Data Management - Extended Edition<br/>[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4915862.svg)](https://doi.org/10.5281/zenodo.4915862)<br/>
-- german: https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/<br/>
-- german: https://rdmo.aip.de/<br/>
-- german: https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung<br/>
+- German: https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/<br/>
+- German: https://rdmo.aip.de/<br/>
+- German: https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung<br/>
