--- a/docs/30_problems/40_data_documentation.mdx
+++ b/docs/30_problems/40_data_documentation.mdx
@@ -75,7 +75,7 @@ Good data documentation does not happen over night - take small steps first. The
 - https://www.data.cam.ac.uk/data-management-guide/organising-your-data
 - https://rfii.de/en/topics/
 - https://datascience.codata.org/articles/10.5334/dsj-2020-032/
-- german: "Was Forschende wollen – Bericht aus der Beratungspraxis zum Forschungsdatenmanagement" [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.5524930.svg)](https://doi.org/10.5281/zenodo.5524930)
-- german: https://www.researchgate.net/publication/221657547_Handbuch_Forschungsdatenmanagement
-- german: https://www.degruyter.com/document/doi/10.1515/9783110657807/html?lang=en
-- german: https://handbuch.tib.eu/w/Lehrbuch_Forschungsdatenmanagement/_Druckversion
+- German: "Was Forschende wollen – Bericht aus der Beratungspraxis zum Forschungsdatenmanagement" [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.5524930.svg)](https://doi.org/10.5281/zenodo.5524930)
+- German: https://www.researchgate.net/publication/221657547_Handbuch_Forschungsdatenmanagement
+- German: https://www.degruyter.com/document/doi/10.1515/9783110657807/html?lang=en
+- German: https://handbuch.tib.eu/w/Lehrbuch_Forschungsdatenmanagement/_Druckversion
